Refactor permission handling in TextInjector to use Combine for state updates, improve accessibility permission descriptions in Info.plist, and enhance the refresh functionality in PreferencesView.
TODO: troubleshoot text injector

--- a/VTSApp/Info.plist
+++ b/VTSApp/Info.plist
@@ -22,6 +22,8 @@
     <string>$(MACOSX_DEPLOYMENT_TARGET)</string>
     <key>NSMicrophoneUsageDescription</key>
     <string>VTS needs access to your microphone to record audio for speech-to-text transcription.</string>
+    <key>NSAccessibilityUsageDescription</key>
+    <string>VTS needs accessibility access to insert transcribed text directly into other applications, just like built-in macOS dictation.</string>
     <key>NSPrincipalClass</key>
     <string>NSApplication</string>
     <key>LSUIElement</key>
