--- a/VTSApp/VTSApp.entitlements
+++ b/VTSApp/VTSApp.entitlements
@@ -8,5 +8,7 @@
     <true/>
     <key>com.apple.security.get-task-allow</key>
     <true/>
+    <key>com.apple.security.automation.apple-events</key>
+    <true/>
 </dict>
 </plist>
