Implement notification system for transcription errors: Add NotificationManager to handle user notifications, including retry and settings actions. Enhance error handling in GroqProvider and OpenAIProvider to provide user-friendly messages. Introduce RetryContext for managing retry attempts and update TranscriptionService to support retry functionality with notifications.

--- a/VTSApp/Info.plist
+++ b/VTSApp/Info.plist
@@ -24,6 +24,8 @@
     <string>VTS needs access to your microphone to record audio for speech-to-text transcription.</string>
     <key>NSAccessibilityUsageDescription</key>
     <string>VTS needs accessibility access to insert transcribed text directly into other applications, just like built-in macOS dictation.</string>
+    <key>NSUserNotificationsUsageDescription</key>
+    <string>VTS shows notifications to help you understand issues and retry if possible.</string>
     <key>NSPrincipalClass</key>
     <string>NSApplication</string>
     <key>LSUIElement</key>
