Enhance DMG creation process and update CI/CD workflow
- Added Node.js setup in the GitHub Actions workflow for modern dependency management.
- Refactored build-dmg.sh to check for Node.js and install the create-dmg package via npm.
- Removed the outdated DMG background generation script and associated assets for a cleaner workflow.
- Updated DMG creation logic to utilize the modern create-dmg tool for improved aesthetics and functionality.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,15 @@ jobs:
       with:
         xcode-version: '16.2'
     
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        cache: 'npm'
+        cache-dependency-path: |
+          package-lock.json
+          **/package-lock.json
+    
     - name: Make build script executable
       run: chmod +x scripts/build-dmg.sh
     
