--- a/VTSApp/VTSApp.entitlements
+++ b/VTSApp/VTSApp.entitlements
@@ -2,13 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>com.apple.security.device.microphone</key>
+    <!-- Mic access for Hardened Runtime builds -->
+    <key>com.apple.security.device.audio-input</key>
     <true/>
+    <!-- Outbound networking -->
     <key>com.apple.security.network.client</key>
-    <true/>
-    <key>com.apple.security.get-task-allow</key>
-    <true/>
-    <key>com.apple.security.automation.apple-events</key>
     <true/>
 </dict>
 </plist>
