--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,12 +1,11 @@
 source 'https://rubygems.org'
 
 gem 'jekyll', '~> 4.3'
-gem 'jekyll-feed', '~> 0.17'
-gem 'jekyll-sitemap', '~> 1.4'
+gem 'minima', '~> 2.5'
 
 group :jekyll_plugins do
-  gem 'jekyll-feed'
-  gem 'jekyll-sitemap'
+  gem 'jekyll-feed', '~> 0.17'
+  gem 'jekyll-sitemap', '~> 1.4'
 end
 
 # Windows and JRuby does not include zoneinfo files, so bundle the tzinfo-data gem
