ci: added the issues permission to the release please workflow

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -9,6 +9,7 @@ on:
 permissions:
   contents: write          # Create releases and tags
   pull-requests: write     # Create and update pull requests
+  issues: write            # Create and manage labels
 
 jobs:
   release-please:
