refactor: separate release management from build process
- Split workflow into two focused responsibilities:
  1. release-please.yml: Handles release PR creation and GitHub release creation
  2. build-release.yml: Handles building and uploading assets when tags are pushed
- This modern approach provides better separation of concerns
- Fixed the untagged merged PR issue by creating proper GitHub releases
- Added Sparkle signing to the build workflow

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -63,7 +63,7 @@ jobs:
             echo "Not a release merge commit"
           fi
 
-  # Create tag for merged release PR
+  # Create tag and GitHub release for merged release PR
   create-release-tag:
     needs: [check-release-merge]
     runs-on: ubuntu-latest
@@ -72,145 +72,46 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       
-      - name: Create and push tag
+      - name: Create tag and GitHub release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAG_NAME: ${{ needs.check-release-merge.outputs.tag_name }}
+          VERSION: ${{ needs.check-release-merge.outputs.version }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           
-          TAG_NAME="${{ needs.check-release-merge.outputs.tag_name }}"
           echo "Creating tag: $TAG_NAME"
-          
           git tag "$TAG_NAME"
           git push origin "$TAG_NAME"
           
-          echo "✅ Created and pushed tag: $TAG_NAME"
-
-  # This job runs when release-please creates a new release OR when a release PR is merged
-  build-and-release:
-    needs: [release-please, check-release-merge, create-release-tag]
-    runs-on: macos-15
-    if: ${{ always() && (needs.release-please.outputs.release_created == 'true' || needs.check-release-merge.outputs.is_release_merge == 'true') }}
-    
-    env:
-      APP_NAME: "VTS"
-      BUNDLE_ID: "com.voicetypestudio.app"
-    
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-        
-      - name: Set version variables
-        id: version
-        run: |
-          if [ "${{ needs.release-please.outputs.release_created }}" = "true" ]; then
-            # Use release-please outputs
-            VERSION="${{ needs.release-please.outputs.version }}"
-            TAG_NAME="${{ needs.release-please.outputs.tag_name }}"
+          # Extract changelog for this version from CHANGELOG.md
+          CHANGELOG_CONTENT=""
+          if [ -f "CHANGELOG.md" ]; then
+            # Extract the changelog section for this version
+            CHANGELOG_CONTENT=$(awk "/## \[$VERSION\]/{flag=1; next} /## \[/{flag=0} flag" CHANGELOG.md | sed '/^$/d')
+            if [ -z "$CHANGELOG_CONTENT" ]; then
+              CHANGELOG_CONTENT="Release $VERSION"
+            fi
           else
-            # Use check-release-merge outputs  
-            VERSION="${{ needs.check-release-merge.outputs.version }}"
-            TAG_NAME="${{ needs.check-release-merge.outputs.tag_name }}"
-          fi
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
-          echo "Version: $VERSION"
-          echo "Tag: $TAG_NAME"
-          
-      - name: Setup Xcode
-        uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: '16.2'
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-      
-      - name: Make build script executable
-        run: chmod +x scripts/build-dmg.sh
-      
-      - name: Build, Sign, and Notarize DMG
-        env:
-          BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
-          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
-          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
-          APPLE_ID: ${{ secrets.APPLE_ID }}
-          APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
-          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-          APP_NAME: ${{ env.APP_NAME }}
-          BUNDLE_ID: ${{ env.BUNDLE_ID }}
-          GITHUB_ACTIONS: true
-          GITHUB_REF: refs/tags/${{ steps.version.outputs.tag_name }}
-          GITHUB_RUN_NUMBER: ${{ github.run_number }}
-        run: ./scripts/build-dmg.sh
-
-      - name: Download Sparkle Tools and Sign DMG
-        env:
-          SPARKLE_PRIVATE_KEY: ${{ secrets.SPARKLE_PRIVATE_KEY }}
-          VERSION: ${{ steps.version.outputs.version }}
-          APP_NAME: ${{ env.APP_NAME }}
-        run: |          
-          echo "🔐 Signing DMG with Sparkle private key..."
-          
-          # Create temporary directory for Sparkle tools
-          TEMP_DIR=$(mktemp -d)
-          cd "$TEMP_DIR"
-          
-          # Download Sparkle tools
-          SPARKLE_VERSION="2.6.4"
-          SPARKLE_URL="https://github.com/sparkle-project/Sparkle/releases/download/${SPARKLE_VERSION}/Sparkle-${SPARKLE_VERSION}.tar.xz"
-          curl -L -o sparkle.tar.xz "$SPARKLE_URL"
-          tar -xf sparkle.tar.xz
-          
-          # Create private key file
-          echo "$SPARKLE_PRIVATE_KEY" > private_key
-          
-          # Sign the DMG and generate signature
-          DMG_PATH="${GITHUB_WORKSPACE}/${APP_NAME}-${VERSION}-Universal.dmg"
-          if [[ -f "$DMG_PATH" ]]; then
-            # Generate signature
-            SIGNATURE=$(./bin/sign_update "$DMG_PATH" private_key)
-            echo "Generated signature: $SIGNATURE"
-            
-            # Save signature to file for the appcast
-            echo "$SIGNATURE" > "${GITHUB_WORKSPACE}/${APP_NAME}-${VERSION}-Universal.dmg.sig"
-            
-            # Also create a JSON file with release metadata for GitHub Pages
-            cat > "${GITHUB_WORKSPACE}/release-metadata.json" << EOF
-          {
-            "version": "${VERSION}",
-            "dmg_name": "${APP_NAME}-${VERSION}-Universal.dmg",
-            "sparkle_signature": "$SIGNATURE",
-            "release_date": "$(date -u +%Y-%m-%dT%H:%M:%SZ)"
-          }
-          EOF
-            
-            echo "✅ Successfully signed DMG with Sparkle signature"
-          else
-            echo "❌ DMG file not found: $DMG_PATH"
-            exit 1
+            CHANGELOG_CONTENT="Release $VERSION"
           fi
           
-          # Cleanup
-          cd "$GITHUB_WORKSPACE"
-          rm -rf "$TEMP_DIR"
-
-      - name: Upload Release Artifacts
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: ${{ steps.version.outputs.tag_name }}
-          files: |
-            ${{ env.APP_NAME }}-${{ steps.version.outputs.version }}-Universal.dmg
-            ${{ env.APP_NAME }}-${{ steps.version.outputs.version }}-Universal.dmg.sig
-            checksums.txt
-            release-metadata.json
-          token: ${{ secrets.GITHUB_TOKEN }}
-        
-      - name: Trigger GitHub Pages Update
-        if: success()
-        run: |
-          echo "🎉 Release ${{ steps.version.outputs.tag_name }} has been published!"
-          echo "📡 GitHub Pages will automatically update the appcast feed."
-          echo "🔗 Appcast URL: https://j05u3.github.io/VTS/appcast.xml"
+          # Create GitHub release using REST API
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/${{ github.repository }}/releases \
+            -d "{
+              \"tag_name\":\"$TAG_NAME\",
+              \"target_commitish\":\"${{ github.sha }}\",
+              \"name\":\"$TAG_NAME\",
+              \"body\":\"$CHANGELOG_CONTENT\",
+              \"draft\":false,
+              \"prerelease\":false,
+              \"generate_release_notes\":false
+            }"
+          
+          echo "✅ Created tag and GitHub release: $TAG_NAME"
