docs: test release-please after fixing release synchronization
This commit tests if release-please now works correctly after manually creating
the missing v0.4.0 and v0.5.0 releases and removing pending labels.

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -202,7 +202,7 @@ jobs:
           release-metadata.json
         token: ${{ secrets.GITHUB_TOKEN }}
         
-    - name: Trigger GitHub Pages Update
+    - name: Success logs
       if: success()
       run: |
         echo "🎉 Release ${{ steps.get_version.outputs.version }} has been published!"
