--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -109,15 +109,15 @@ jobs:
           exit 1
         fi
         
-        if [[ ! -f "bin/sign_update" ]]; then
-          echo "❌ sign_update tool not found in bin directory"
+        if [[ ! -f "bin/sign-update" ]]; then
+          echo "❌ sign-update tool not found in bin directory"
           echo "📂 Contents of bin directory:"
           ls -la bin/
           exit 1
         fi
         
-        # Make sign_update executable
-        chmod +x bin/sign_update
+        # Make sign-update executable
+        chmod +x bin/sign-update
         
         # Create private key file
         echo "$SPARKLE_PRIVATE_KEY" > private_key
@@ -129,13 +129,13 @@ jobs:
         if [[ -f "$DMG_PATH" ]]; then
           echo "✅ DMG file found, generating signature..."
           
-          # Generate signature with error handling
-          if ! SIGNATURE=$(./bin/sign_update "$DMG_PATH" private_key); then
+          # Generate signature with error handling (using correct syntax)
+          if ! SIGNATURE=$(./bin/sign-update -p --ed-key-file private_key "$DMG_PATH"); then
             echo "❌ Failed to generate signature"
             echo "🔧 Debugging info:"
             file "$DMG_PATH"
             ls -la "$DMG_PATH"
-            ./bin/sign_update --help || echo "No help available"
+            ./bin/sign-update --help || echo "No help available"
             exit 1
           fi
           
