fix: add repository-projects read permission for release-please v4
- Release Please v4 requires repository-projects: read permission
- This fixes autorelease: pending labels not being properly managed
- Prevents 'untagged merged release PRs outstanding' deadlock issue

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -10,6 +10,7 @@ permissions:
   contents: write          # Create releases and tags
   pull-requests: write     # Create and update pull requests
   issues: write            # Create and manage labels
+  repository-projects: read # Read repository projects (required for v4)
 
 jobs:
   release-please:
