fix: use gh pr edit instead of gh api for label removal
- gh api with URL encoding was causing syntax errors
- gh pr edit is more reliable for label operations
- suppress stderr to avoid noise from already-removed labels

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -32,7 +32,7 @@ jobs:
           if [ -n "$pr_numbers" ]; then
             for pr in $pr_numbers; do
               echo "Removing stale label from merged PR #$pr"
-              if gh api "repos/${{ github.repository }}/issues/$pr/labels/autorelease:%20pending" -X DELETE --silent; then
+              if gh pr edit "$pr" --remove-label "autorelease: pending" 2>/dev/null; then
                 echo "✅ Successfully removed label from PR #$pr"
               else
                 echo "❌ Failed to remove label from PR #$pr (may already be removed)"
