--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,7 +6,8 @@
   "separate-pull-requests": false,
   "release-search-depth": 200,
   "commit-search-depth": 500,
-  "bootstrap-sha": "1e51f27d3c157163b49102673712cf951d1d01b1",
+  "bootstrap-sha": "e5b5052983dc5fefd64ed8ae588f1841c100079d",
+  "last-release-sha": "e5b5052983dc5fefd64ed8ae588f1841c100079d",
   "packages": {
     ".": {
       "package-name": "VTS",
