docs: update notes in build-and-distribute.yml regarding GITHUB_RUN_NUMBER and CFBundleVersion

--- a/.github/workflows/build-and-distribute.yml
+++ b/.github/workflows/build-and-distribute.yml
@@ -1,3 +1,9 @@
+# NOTE: Do not rename this file as I think it will reset the `GITHUB_RUN_NUMBER` which 
+# provokes resetting the `CFBundleVersion`, or if you need to then shift it so
+# the final values of `CFBundleVersion` (see `build-dmg.sh`) keep increasing 
+# from where we left.
+# See last (possible) reset time: 
+# https://github.com/j05u3/VTS/commit/fb79c175bafad2e7359d88e8a1bd29eba12528b0
 name: Build and Release macOS App
 
 on:
